<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Bingo Nomadas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_coins">Coins</string>
    <string name="helpper">By $</string>
    <string name="record_today">Record today </string>
    <string name="board">Board </string>
    <string name="movements"> Movements </string>
    <string name="need_up"> Need up: </string>
    <string name="the_best"> The best:  </string>
    <string name="without_coins"> Without coins\n See how do win? </string>
    <string name="back"> Back </string>
    <string name="network_err"> Err network, test your connection or try later </string>
    <string name="msj_share">Bingo Nomadas, juega y participa por fabulosos premios.\nDescargalo aquí:</string>
    <string name="share">Comparte con tus amigos, y aumenta la diversión</string>
    <string name="singup">Singup first</string>
    <string name="ref">Ref</string>
    <!--
    <string name="record_today"> Record today </string>
    <string name="record_today"> Record today </string>
    -->
    <string name="reward">" Reward "</string>
    <string name="count"> Count / Coins </string>
    <string name="tosingup">Singup and reward $500</string>
    <string name="to_ref">Tell us the cel number whose refer you this game and get $500</string>
    <string name="do_ref">Share this game Reward $10.000 a for each</string>
    <string name="award">" Store "</string>
    <string name="play">" Play "</string>
    <string name="play_video">" See this video to awards $100 "</string>
    <string name="save">" Save "</string>
    <string name="title_boards">Game\'s Boards</string>
    <string name="msj_mindbreak">¿what is your level on this game? show it. The user with minor number the movements on board default win... there are awards also to position secound and third. take part by just $100</string>
    <string name="wall">Wall\'s Fame week</string>
    <string name="new_game">New game</string>
    <string name="cell">Cell:</string>
    <string name="email">E-Mail:</string>
    <string name="name">Complet Name:</string>
    <string-array name="simple_word">
        <item >Order the balls, by color, match to semaphore on right of the display</item>
        <item >Just should touch the ball that you want does move to empty plate.</item>
        <item >Just can move the balls together to the empty plate, as that just can move one ball by touch.</item>
    </string-array>
    <string-array name="hot_word">
        <item >The temperature has increase too much, the red balls, has been come hot balls.</item>
        <item >They try finish quick the game, rise automatilly to position assigned</item>
    </string-array>
    <string-array name="green_word">
        <item >We should be orderly to forewarn that the temperature increase other time</item>
        <item >Order the balls, since minor until major, depending  number\'s itself ball, staring whit 1 on left to the display</item>
        <item >Order its by color, match to semaphore on right of the display</item>
    </string-array>
    <string-array name="frozen_word">
        <item >The temperature has decrease too much, some balls green and yellow on its rows assigned has been frost. Its can\'t move</item>
        <item >The red balls is early of have the some fate, but if there are more one red ball on row assigned, can defrost and move with 2 touchs</item>
        <item >For defrost the balls should order its assigned row, or the row more early.</item>
    </string-array>
    <string name="being">...Resume</string>
    <string name="title">How do play?</string>
    <string name="next">...Next</string>
    <string name="tuto">See complet tutorial</string>
    <string name="singup_">Should singup/singin first!</string>
    <string name="copy">Developed by Jhordy Abonia G. \nE-mail: jhordy.abonia@outlook.com</string>
    <string name="singup2">singup</string>
    <string name="erase">Erase data</string>
    <string name="pass">password</string>
    <string name="pass2">Repeat password</string>
    <string name="change_password">Change password</string>
    <string name="text_welcome">Start new game</string>
    <string name="without_movementas">Without movements, start new game</string>



</resources>
