<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5ac20"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/count"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:animateLayoutChanges="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tosingup"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic"></EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/cel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cell"
            android:inputType="phone"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass2"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/singup2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ref:"
            android:inputType="phone"
            android:textColor="#fff"
            android:textColorHint="#fcfcfc"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ff0000"
            android:text="@string/save"
            android:textColor="#fff"
            android:textStyle="bold|italic" />


    </LinearLayout>

</FrameLayout>
